[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameScene_UtNeO.gd" type="Script" id=1]
[ext_resource path="res://Fonts/basic_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Img/card_back_dev.png" type="Texture" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="PutCardsHere" type="ColorRect" parent="."]
margin_left = 309.0
margin_top = 193.0
margin_right = 394.0
margin_bottom = 303.0

[node name="HandPos" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="HandPos"]
margin_top = 500.0
margin_right = 900.0
margin_bottom = 600.0
color = Color( 0.537255, 0.537255, 0.537255, 1 )

[node name="SelectActionButtons" type="Node" parent="."]

[node name="Add" type="Button" parent="SelectActionButtons"]
margin_top = 460.0
margin_right = 180.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "+"

[node name="Sub" type="Button" parent="SelectActionButtons"]
margin_left = 180.0
margin_top = 460.0
margin_right = 360.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "-"

[node name="Mul" type="Button" parent="SelectActionButtons"]
margin_left = 360.0
margin_top = 460.0
margin_right = 540.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "*"

[node name="Div" type="Button" parent="SelectActionButtons"]
margin_left = 540.0
margin_top = 460.0
margin_right = 720.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="Pot" type="Button" parent="SelectActionButtons"]
margin_left = 720.0
margin_top = 460.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "^"

[node name="Draw_Card" type="TextureButton" parent="."]
margin_left = 427.0
margin_top = 204.0
margin_right = 502.0
margin_bottom = 304.0
texture_normal = ExtResource( 3 )
expand = true

[connection signal="pressed" from="Draw_Card" to="." method="_on_Draw_Card_pressed"]
